# drop

./: .clang-format  .clang-tidy  .gitignore  README.md  arguments.hpp  fs.cpp  main.cpp  meson.build  meson.format  print.hpp  trash_info.hpp  version.hpp.in
.github/workflows/: build.yaml  check.yaml
scripts/: clang-format.sh  code-checker.sh  meson-format.sh  typos.sh
source/: arguments.cpp  fs.cpp  fs.hpp  main.cpp  meson.build  print.cpp  print.hpp  trash_info.cpp  trash_info.hpp  uuid.cpp  uuid.hpp  version.in.hpp
sources/: arguments.hpp  print.cpp  trash_info.cpp
